adding an atol6 subsetter utility to demonstrate usage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,4 +55,4 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
-          python -m pytest --verbose
+          python -m pytest --verbose -m "not region"
