--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 markers =
-    network: mark a test that requires a network connection.
+    region: mark a test that requires a in-region datacenter access
 filterwarnings =
     ignore::DeprecationWarning
