--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,11 @@ name: h5coro
 channels:
   - conda-forge
 dependencies:
+  - python>=3.7
+  - pip
   - pytest
   - numpy
   - boto3
   - s3fs
   - h5py
   - sliderule
-  - earthaccess>=0.5.3
