--- a/environment.yml
+++ b/environment.yml
@@ -3,11 +3,16 @@ name: h5coro
 channels:
   - conda-forge
 dependencies:
+  - boto3
+  - h5py
+  - ipykernel
+  - jupyterlab
+  - jupyterlab_widgets
+  - numpy
+  - matplotlib
   - python>=3.7
   - pip
   - pytest
-  - numpy
-  - boto3
   - s3fs
-  - h5py
   - sliderule
+  - xarray
